# rs-pdf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: commit.md
.github/workflows/: workflow.yml
demo/: dynamic.json  static.json
schema/: demo-flexible.json  demo.json  schema.json
src/: block_document.rs  box_document.rs  main.rs
src/block_document/: block.rs  block_container.rs  bounds.rs  container.rs  direction.rs  document.rs  document_json.rs  dynamic_page.rs  flexible_container.rs  flexible_item.rs  font.rs  geometry.rs  image.rs  line.rs  page.rs  page_number.rs  pdf_generator.rs  pdf_writer.rs  rect.rs  rectangle.rs  static_page.rs  style.rs  text.rs  text_renderer.rs  wrapper.rs
src/box_document/: document.rs  document_json.rs  pdf_generator.rs  root.rs
